# squidyrun

./: .gitignore  CHANGELOG.md  CONTRIBUTING-I18N.md  CONTRIBUTING.md  EXEMPLO.md  LICENSE  README.md  package.json  projeto-de-traducao.md  pyproject.toml  requirements.txt
docs/: I18N.md
squidy/: __init__.py
squidy/adapters/: __init__.py
squidy/adapters/filesystem/: __init__.py  local_fs.py  mock_fs.py
squidy/adapters/providers/: __init__.py  anthropic_adapter.py  openai_adapter.py  openrouter_adapter.py
squidy/audit/: __init__.py  engine.py
squidy/audit/checkers/: __init__.py  base.py  consistency_checker.py  freshness_checker.py  kanban_checker.py  structure_checker.py
squidy/audit/detectors/: __init__.py  base.py  heuristic_detector.py  manifest_detector.py
squidy/cli/: __init__.py  app.py
squidy/cli/commands/: __init__.py  audit.py  init.py  status.py
squidy/cli/ui/: __init__.py  language_selector.py  theme.py
squidy/core/: __init__.py  i18n.py
squidy/core/domain/: __init__.py  audit_result.py  config.py  project.py
squidy/core/ports/: __init__.py  ai_provider.py  filesystem.py  storage.py
squidy/generation/: __init__.py  file_generator.py  template_engine.py
squidy/locales/en-US/: messages.yaml  prompts.yaml  templates.yaml
squidy/locales/pt-BR/: messages.yaml  prompts.yaml  templates.yaml
tests/: test_i18n.py  test_integration.py  test_templates_i18n.py
